# daemon

./: .env.example  .gitignore  alembic.ini  bootstrap.py  daemon_env.py  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
.ref/: CLAUDE.md  CODEX_SELF_EXEC_PLAN.md  DESIGN_QA.md  DESIGN_QA_v1_archive.md  DOMINION_WRIT_DEED.md  EXECUTION_MODEL.md  FRONTEND_GUIDE.md  HANDOFF_IMPL.md  HANDOFF_TODO.md  INTERACTION_DESIGN.md  INTERFACE_DESIGN.md  MECHANISM_AUDIT.md  MEMORY.md  NEXT_PHASE_PLAN.md  README.md  REFACTOR_PLAN.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN.review.html  SYSTEM_DESIGN_REFERENCE.md  TERMINOLOGY.md  UX_SPEC.md  action_plan.md  daemon_实施方案.md  daemon_系统设计方案_ddbc4981.plan.md  daemon_统一方案_v2.md  daemon_统一方案_v2_archive.md  delivery_note.md  gap_analysis.md
.ref/_archive/: DESIGN_QA.md  DIAGNOSTIC_IMPL_LOG.md  EXECUTION_MODEL.md  FRONTEND_ALIGNMENT.md  FRONTEND_GUIDE.md  HANDOFF_TODO.md  INTERACTION_DESIGN.md  OPEN_SOURCE_REPLACEMENT_PLAN.md  REFACTOR_KNOWLEDGE_AND_WARMUP.md  SYSTEM_DESIGN_v4_2026-03-14.md  SYSTEM_DESIGN_v5_2026-03-14.md  TWO_LAYER_ARCHITECTURE_DISCUSSION.md  TWO_LAYER_ARCHITECTURE_SUMMARY.md  action_plan.md  daemon_实施方案.md  daemon_系统设计方案_ddbc4981.plan.md
.ref/_work/: CLIENT_SPEC.md  DIAGNOSTIC_TEST_SUITE.md  EXTERNAL_INTEGRATIONS.md  FILE_STRUCTURE.md  (+12 more)
alerts/: TROUBLESHOOTING.md
config/: __init__.py  com.daemon.startup.plist  lexicon.json  mcp_servers.json  mem0_config.py  model_policy.json  model_registry.json  plane-nginx.conf  schedules.json  sensitive_terms.json  skill_registry.json  source_tiers.toml  spine_registry.json  system.json
docs/: api_scenes.md
fabric/: __init__.py  compass.py  memory.py  playbook.py
mcp_servers/: __init__.py  arxiv_search.py  code_functions.py  core_api.py  crossref.py  devto.py  docker_control.py  excalidraw_export.py  firecrawl_scrape.py  gmail.py  google_auth_helper.py  google_calendar.py  google_docs.py  google_drive.py  hackernews.py  hashnode.py  huggingface.py  intervals_icu.py  kaggle.py  kroki.py  languagetool.py  latex.py  libraries_io.py  macos_control.py  matplotlib_chart.py  mermaid_render.py  newsdata.py  openalex.py  paper_tools.py  reddit.py  rss_reader.py  semantic_scholar.py  strava.py  twitter.py  typst.py  unpaywall.py
migrations/: 001_initial_schema.sql  002_add_message_source.sql  env.py
openclaw/workspace/engineer/reference_project/: .gitignore  README.md  pyproject.toml
openclaw/workspace/engineer/reference_project/.github/workflows/: ci.yml
openclaw/workspace/engineer/reference_project/src/myapp/: __init__.py  __main__.py  cli.py  config.py
openclaw/workspace/engineer/reference_project/src/myapp/api/: __init__.py  routes.py
openclaw/workspace/engineer/reference_project/src/myapp/models/: __init__.py
openclaw/workspace/engineer/reference_project/src/myapp/services/: __init__.py
openclaw/workspace/engineer/reference_project/tests/: conftest.py  test_app.py  test_health.py
openclaw/workspace/publisher/reference-python-project/: README.md  pyproject.toml
openclaw/workspace/publisher/reference-python-project/src/my_package/: __init__.py
openclaw/workspace/publisher/reference-python-project/src/my_package/cli/: __init__.py
openclaw/workspace/publisher/reference-python-project/src/my_package/core/: __init__.py
openclaw/workspace/publisher/reference-python-project/src/my_package/utils/: __init__.py
openclaw/workspace/publisher/reference-python-project/tests/unit/: test_core.py
openclaw/workspace/researcher/python_project_structure_2025/: .gitignore  Makefile  README.md  pre-commit-config.yaml  pyproject.toml
openclaw/workspace/researcher/python_project_structure_2025/.github/workflows/: ci.yml
openclaw/workspace/researcher/python_project_structure_2025/src/my_project/: __init__.py  __main__.py  core.py  utils.py
openclaw/workspace/researcher/python_project_structure_2025/tests/: test_core.py  test_utils.py
persona/: stage0_interview.md
psyche/: __init__.py  config.py  instinct.md  instinct.py  instinct_engine.py  ledger_stats.py  lore.py  memory.py  preferences.toml  rations.toml  source_cache.py
runtime/: __init__.py  brief.py  cortex.py  design_validator.py  drive_accounts.py  ether.py  event_bridge.py  mcp_code_exec.py  mcp_dispatch.py  openclaw.py  retinue.py  semantic.py  temporal.py  trace_context.py  trail_context.py
scripts/: clean_openclaw_residual.sh  init-databases.sql  init-firecrawl.sql  mem0_coldstart.py  restore.py  run_exception_tests.py  run_warmup_tasks.py  setup.sh  start.py  state_reset.py  stop.py  validate_lexicon.py  verify.py  verify_sync.py  warmup.py  watchdog.sh
services/: __init__.py  api.py  cadence.py  delivery.py  dialog.py  dispatch.py  dispatch_model.py  dispatch_replay.py  dispatch_semantic.py  dispatch_steps.py  dispatch_strategy.py  dominion_writ.py  event_bus.py  folio_writ.py  herald.py  ledger.py  llm_local.py  minio_client.py  plane_client.py  plane_webhook.py  quota.py  ragflow_client.py  scheduler.py  session_manager.py  state_store.py  storage_paths.py  store.py  system_reset.py  voice.py  wash.py  will.py
spine/: __init__.py  canon.py  contracts.py  nerve.py  pact.py  registry.py  routines.py  routines_ops_learn.py  routines_ops_maintenance.py  routines_ops_record.py  routines_ops_stats.py  trace.py  trail.py
temporal/: __init__.py  activities.py  activities_campaign.py  activities_delivery.py  activities_endeavor.py  activities_exec.py  activities_health.py  activities_herald.py  activities_maintenance.py  activities_replan.py  campaign_workflow.py  endeavor_workflow.py  worker.py  workflows.py
tests/: conftest.py  test_bootstrap.py  test_diagnostics.py  test_fabric.py  test_guardrails.py  test_mcp_servers.py  test_psyche.py  test_services.py  test_spine.py  test_temporal.py
tmp/: IMPLEMENTER_MECHANISM_MAPPING.md  PORTAL_APPLE_PENDING.md  PORTAL_BACKEND_GAPS.md  PORTAL_CHART_COLOR_AND_LAYOUT_RULES.md  PORTAL_IMPLEMENTATION_WORKBOOK.md
warmup/: persona_analysis.md  stage2_link_verification.py  stage3_runner.py  stage3_test_tasks.json  stage4_exceptions.py
(+261 files in other folders)
