[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daemon"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "temporalio>=1.7",
    "httpx>=0.27",
    "openai>=1.50",
    "anthropic>=0.40",
    "python-multipart>=0.0.9",
    "websockets>=13",
    "mcp>=1.0",
    "asyncpg>=0.30",
    "minio>=7.2",
    "langfuse>=2.50",
    "mem0ai>=0.1",
    "nemoguardrails>=0.10",
    "alembic>=1.13",
    "PyJWT>=2.8",
    "pydantic>=2.0",
    "trafilatura>=1.12",
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "tree-sitter-javascript>=0.23",
    "tree-sitter-typescript>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["runtime*", "temporal*", "services*", "config*", "alerts*", "interfaces*", "mcp_servers*"]
